# CBPanel

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  del_runs.yml  dev-build.yml  release.yml
scripts/: build-sidecar.mjs  build-windows-portable.mjs  check-bundle-baseline.mjs  generate-update-manifest.mjs  package-windows-portable.mjs  prepare-tauri-release-config.mjs  release-linux.mjs  release-mac.mjs  release-target.mjs  release-windows.mjs  smoke-linux-release.mjs  smoke-mac-release.mjs  smoke-release.mjs
scripts/baselines/: frontend-bundle-baseline.json
server/: index.ts
server/services/: appBackupService.test.ts  appBackupService.ts  archiveUtils.ts  binaryService.test.ts  binaryService.ts  desktopRuntimeService.ts  environmentPackageService.test.ts  environmentPackageService.ts  extensionService.test.ts  extensionService.ts  githubMirrorFetch.test.ts  githubMirrorFetch.ts  githubMirrorProbeService.test.ts  githubMirrorProbeService.ts  proxyService.test.ts  proxyService.ts  sessionService.test.ts  sessionService.ts
server/storage/: seedProfiles.ts  sqliteStore.test.ts  sqliteStore.ts  types.ts
src/: i18n.test.ts  i18n.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/hooks/: useBrowserCoreActions.ts  useDiagnosticsActions.ts  useExtensionActions.ts  useProfileLifecycleActions.ts  useProfileUtilityActions.ts  useProxyActions.ts  (+1 more)
(+79 files in other folders)
