[package]
name = "cbpanel"
version = "0.1.0"
description = "CBPanel desktop shell"
authors = ["CBPanel"]
edition = "2021"

[lib]
name = "cbpanel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }
