[package]
name = "cbpanel"
version = "0.1.0"
description = "CBPanel desktop shell"
authors = ["CBPanel"]
edition = "2021"

[lib]
name = "cbpanel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61.2"
